# ChangeLog for www-plugins/gnash
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/gnash/ChangeLog,v 1.76 2012/02/24 02:53:52 chithanh Exp $

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.10.ebuild, metadata.xml:
  Make gconf support optional.

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.10.ebuild:
  Don't download tarball from savannah.

*gnash-0.8.10 (24 Feb 2012)

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +gnash-0.8.10.ebuild, +files/gnash-0.8.10-amf-include.patch,
  +files/gnash-0.8.10-gettext-macro.patch, metadata.xml:
  Version bump, bug #403177. Force python-2 during build, bug #392969.

  01 Feb 2012; Brent Baude <ranger@gentoo.org> gnash-0.8.9-r2.ebuild:
  Mistakenly commited. Back to ~ppc gnash-0.8.9-r2

  01 Feb 2012; Brent Baude <ranger@gentoo.org> gnash-0.8.9-r2.ebuild:
  Marking gnash-0.8.9-r2 ppc for bug 391283

  08 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gnash-0.8.9-r2.ebuild:
  x86 stable wrt bug #391283

  02 Dec 2011; Steve Dibb <beandog@gentoo.org> gnash-0.8.9-r2.ebuild:
  amd64 stable, bug 391283

  26 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.9-r2.ebuild, +files/gnash-0.8.9-cygnal-sshclient.patch:
  Fix building of cygnal sshclient, bug #391915.

*gnash-0.8.9-r2 (25 Nov 2011)

  25 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -gnash-0.8.9-r1.ebuild, +gnash-0.8.9-r2.ebuild,
  +files/gnash-0.8.9-kde4-libdir.patch:
  Fix kde multilib library path, bug #391283.

*gnash-0.8.9-r1 (21 Nov 2011)

  21 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +gnash-0.8.9-r1.ebuild, +files/gnash-0.8.9-cve-2011-4328.patch:
  Add patch for security bug #391283

  16 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.9.ebuild:
  Add tslib dependency that was previously automagic. warn user against