@@ -26,9 +26,9 @@ AUX gnash-0.8.9-no-deprecated-avformat-metadata.patch 1299 RMD160 a88e744b8886ad
 DIST gnash-0.8.10.tar.gz 6099894 RMD160 72debb3e64853450fe74b7f1d6e9b40b9ae70964 SHA1 4f8ace5af1a327718f353d5294b589f3251f41ae SHA256 61fbeec6826c89e6f3fc520336a152b17901e6d0e9db207d7c4db27eeb5ceb2b
 DIST gnash-0.8.8.tar.bz2 3850383 RMD160 621afbd14180ce770f60a6e158f9fda0b4d5ec02 SHA1 d349e0321e7fe9abcd265d63ce282cd2a7ce59d3 SHA256 dcac4b81f81ecd6cc7c5422d7c731fc5c2a7be7fb18b5570a7e6f8fb5fc6e220
 DIST gnash-0.8.9.tar.bz2 3777140 RMD160 34bb51cfe5b8593dc14bc2c21c0085277dbb23f1 SHA1 585c320c98b3304fcbba230f2c4b1fdf2a52aee0 SHA256 f90dbdc6f03d787b239b9edacbea077b46d69ae9d85f08af23f256af389c48bd
-EBUILD gnash-0.8.10.ebuild 7633 RMD160 ce444528c2b2803db26f75ab823438f92c3947e4 SHA1 2edbfa3db428d9f946cff8703e1d6d8ffed21534 SHA256 4f62ba953bdd1d34066733ffef7d26c92d7bfd0070fe09a15585ac8296f7f33b
+EBUILD gnash-0.8.10.ebuild 7659 RMD160 204c24a9906e902d33d9749f7e09452a5e68a3b6 SHA1 77f95e6b8f05c242377fcefb09ddecd116103e0f SHA256 f2efd5f5da31976785f70adec2f47d7e0956dfad897e534ddfbbb858081b72b5
 EBUILD gnash-0.8.8.ebuild 9006 RMD160 cd9a10d9b7b121b638bac179c97de26771e66542 SHA1 f6b0ae7862286aabbbd34e99a318021136ae33bc SHA256 594842337ae216fa7a89112298f00e2a1c74609af4a4b48f3e39b4b2dc82b380
 EBUILD gnash-0.8.9-r2.ebuild 9118 RMD160 1d2c163338940197f734f7dfb8adb935ead89a2c SHA1 b4159f25a03280bc60c4562cfbef30973be1bd6c SHA256 52f4250e39beeada4c56d45f8fcd3e1de143287c91249c9c82de5a2c2cb2d720
 EBUILD gnash-0.8.9.ebuild 8830 RMD160 b3e6ab1a6a6ce84c502af1647e4e58b65e110809 SHA1 f6fd90d100132b8658428cf3cafc8cbe6bec1c8d SHA256 8a3c33a3a82619f22863e32fb83e264193cfe94132491535fb919a9ed863478a
-MISC ChangeLog 26577 RMD160 1e8f9187b82de9876055dbaecff2bae71dc78690 SHA1 693a07b11ee2e8367bcd3e0bcb5c5b125a1acaec SHA256 8909c25192342d383d54096f994f11ec24435739417386e5c2687b99edd2512d
+MISC ChangeLog 26740 RMD160 30598b2e2ecf42b0c6390cfdb719e3bbac42aa28 SHA1 c968acfd92699d95a55e62995c90dc3a33dd9b8b SHA256 7c8dd18f2cf239994f057576c6f429278bc94b4e315995b87b907c180e990c1d
 MISC metadata.xml 1027 RMD160 aa9f8e70f4b29c20af06375e49f072cd47b099b0 SHA1 26fe0b3c8699f8de6038163488e71b82449ee3bd SHA256 071f3c3f214ac2346bbec08cf2a129be0b1edea5e1e0d7401b884ece564de5ce
